# MobileFaceNet

./: config.py  pyproject.toml
retinaface/: detector.py
