[project]
name = "mobilefacenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imgaug>=0.4.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
